style.css
body{
  margin: 0;
  padding: 0;
  background-image: url(./image/background.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}

.container{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.grid-container {
  display: grid;
  grid-template-columns:  repeat(9, auto);
  gap: 15px;
  /* width: 200px; */
  /* margin: 20px auto; */
}

.key {
  background-color: hsla(0, 0%, 0%, 0.5);
  width: 2.2rem;
  height: 1rem;
  color: white;
  border: 3px solid hsl(0, 0%, 0%);
  padding: 1.4rem;
  text-align: center;
  border-radius: 0.3rem;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 1.5rem;
  font-family: monospace;
  transition: transform 0.1s ease;
}

.active{
  border: 3px solid #ffc600;
  transform: scale(1.1);
  box-shadow: 0 0 1rem #ffc600;
}

.label{
  margin-top: 0.1rem;
  font-size: 0.65rem;
  color: #ffc600;
  letter-spacing: .1rem;
}

